# snake

./: .gitignore  config.py  dqn_model.onnx  game.py  memory.py  network.py  onnx_export.py  play.py  pyproject.toml  train.py  vec_game.py
.claude/: CLAUDE.md
my-snake-game/: package-lock.json  package.json  pnpm-lock.yaml
my-snake-game/public/: dqn_model.onnx
my-snake-game/src/app/: page.tsx
